# BGLRenderer

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2.cmake  sdl.cmake
code/: Application.cpp  Application.h  ApplicationSandbox.cpp  ApplicationSandbox.h  AssetContentLoader.cpp  AssetContentLoader.h  AssetFileChangesObserver.cpp  AssetFileChangesObserver.h  AssetManager.cpp  AssetManager.h  AssetManagerTypes.h  AssetsLoader.cpp  AssetsLoader.h  Base.h  ConcreteAssetManager.cpp  ConcreteAssetManager.h  Config.cpp  Config.h  ConfigLoader.h  ConsoleWindow.cpp  ConsoleWindow.h  Engine.cpp  Engine.h  EntryPoint.cpp  GLMMath.h  Input.cpp  Input.h  Log.cpp  Log.h  MaterialLoader.cpp  MaterialLoader.h  ModelLoader.cpp  ModelLoader.h  OpenGLBase.cpp  OpenGLBase.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLMesh.cpp  (+24 more)
code/Assets/: AssetContentLoader.h  AssetFileChangesObserver.h  AssetManager.cpp  AssetManager.h  AssetManagerTypes.h  ConcreteAssetManager.cpp  ConcreteAssetManager.h  ConfigLoader.cpp  ConfigLoader.h  MaterialLoader.cpp  MaterialLoader.h  ModelLoader.cpp  ModelLoader.h  ProgramLoader.cpp  ProgramLoader.h  SceneLoader.cpp  SceneLoader.h  TextureLoader.cpp  TextureLoader.h
code/Foundation/: Application.h  Base.h  Config.h  ConsoleWindow.cpp  ConsoleWindow.h  Engine.cpp  Engine.h  GLMMath.h  Input.cpp  Input.h  Log.cpp  Log.h  ObjectInMemoryCache.h  Timer.h
code/Graphics/: EnvironmentMapGenerator.cpp  EnvironmentMapGenerator.h  Gizmos.cpp  Gizmos.h  OpenGLBase.h  OpenGLRenderObject.h  OpenGLRenderer.cpp  OpenGLRenderer.h
code/Graphics/Resources/: OpenGLCubemap.cpp  OpenGLCubemap.h  OpenGLEnvironmentMap.cpp  OpenGLEnvironmentMap.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLMesh.cpp  OpenGLMesh.h  OpenGLProgram.cpp  OpenGLProgram.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h
code/Platform/: EntryPoint.cpp  SDLWindow.cpp
code/Sandbox/: ApplicationSandbox.cpp  ApplicationSandbox.h
code/Utility/: RapidJSONParsers.cpp  RapidJSONParsers.h
code/World/: Scene.h  SceneObject.cpp  SceneObject.h  Transform.h
lib/ImGui/: CMakeLists.txt
lib/SDL2/include/: SDL_egl.h  SDL_render.h  SDL_stdinc.h  SDL_system.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
